hphp/test/zend/good/ext-gd/imageinterlace_error1.php
<?php

$image = imagecreatetruecolor(100, 100);

//calling with no parameters
var_dump(imageinterlace());
?>