hphp/test/zend/bad/ext/gd/tests/imagefilter_error12.php
<?php
$image = tmpfile();

var_dump(imagefilter($image, IMG_FILTER_COLORIZE, 255, 255, 255));
?>